--- a/gallery.html
+++ b/gallery.html
@@ -254,12 +254,14 @@
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-10.jpg" alt=""/>
             </a>
-          </li><li class="item">
+          </li>
+          <!--<li class="item">
             <a href="forblog/blog2tall-11.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-12.jpg" alt=""/>
             </a>
-          </li><li class="item">
+          </li>-->
+          <li class="item">
             <a href="forblog/blog2tall-13.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-13.jpg" alt=""/>
@@ -284,12 +286,14 @@
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-17.jpg" alt=""/>
             </a>
-          </li><li class="item">
+          </li>
+          <!--<li class="item">
             <a href="forblog/blog2tall-18.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-18.jpg" alt=""/>
             </a>
-          </li><li class="item">
+          </li>-->
+          <li class="item">
             <a href="forblog/blog2width.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width.jpg" alt=""/>
