--- a/gallery.html
+++ b/gallery.html
@@ -249,7 +249,14 @@
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-9.jpg" alt=""/>
             </a>
-          </li><li class="item">
+          </li>
+          <li class="item">
+            <a href="forblog/blog2tall-14.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+              <span class="overlay zoom"></span>
+              <img src="forblog/blog2tall-14.jpg" alt=""/>
+            </a>
+          </li>
+          <li class="item">
             <a href="forblog/blog2tall-10.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-10.jpg" alt=""/>
@@ -265,11 +272,6 @@
             <a href="forblog/blog2tall-13.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-13.jpg" alt=""/>
-            </a>
-          </li><li class="item">
-            <a href="forblog/blog2tall-14.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
-              <span class="overlay zoom"></span>
-              <img src="forblog/blog2tall-14.jpg" alt=""/>
             </a>
           </li><li class="item">
             <a href="forblog/blog2tall-15.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
