--- a/gallery.html
+++ b/gallery.html
@@ -249,14 +249,7 @@
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-9.jpg" alt=""/>
             </a>
-          </li>
-          <li class="item">
-            <a href="forblog/blog2tall-14.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
-              <span class="overlay zoom"></span>
-              <img src="forblog/blog2tall-14.jpg" alt=""/>
-            </a>
-          </li>
-          <li class="item">
+          </li><li class="item">
             <a href="forblog/blog2tall-10.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-10.jpg" alt=""/>
@@ -269,15 +262,21 @@
             </a>
           </li>-->
           <li class="item">
+            <a href="forblog/blog2tall-15.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+              <span class="overlay zoom"></span>
+              <img src="forblog/blog2tall-15.jpg" alt=""/>
+            </a>
+          <li class="item">
             <a href="forblog/blog2tall-13.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-13.jpg" alt=""/>
             </a>
           </li><li class="item">
-            <a href="forblog/blog2tall-15.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2tall-14.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
               <span class="overlay zoom"></span>
-              <img src="forblog/blog2tall-15.jpg" alt=""/>
+              <img src="forblog/blog2tall-14.jpg" alt=""/>
             </a>
+          </li>
           </li><li class="item">
             <a href="forblog/blog2tall-16.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
               <span class="overlay zoom"></span>
