--- a/gallery.html
+++ b/gallery.html
@@ -331,7 +331,14 @@
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-9.jpg" alt=""/>
             </a>
-          </li><li class="item">
+          </li>
+          <li class="item">
+            <a href="forblog/blog2width-14.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+              <span class="overlay zoom"></span>
+              <img src="forblog/blog2width-14.jpg" alt=""/>
+            </a>
+          </li>
+          <li class="item">
             <a href="forblog/blog2width-10.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-10.jpg" alt=""/>
@@ -351,12 +358,8 @@
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-13.jpg" alt=""/>
             </a>
-          </li><li class="item">
-            <a href="forblog/blog2width-14.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
-              <span class="overlay zoom"></span>
-              <img src="forblog/blog2width-14.jpg" alt=""/>
-            </a>
-          </li><li class="item">
+          </li>
+          <li class="item">
             <a href="forblog/blog2width-15.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-15.jpg" alt=""/>
