--- a/gallery.html
+++ b/gallery.html
@@ -210,47 +210,59 @@
             </a>
           </li>
           <li class="item">
-            <a href="forblog/blog2tall.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2tall.jpg" class="view" rel="gallery" title="Panino">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall.jpg" alt=""/>
             </a>
-          </li><li class="item">
-            <a href="forblog/blog2tall-2.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+          </li>
+          <li class="item">
+            <a href="forblog/blog2tall-2.jpg" class="view" rel="gallery" title="The Ecstasy of Saint Teresa Zoom">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-2.jpg" alt=""/>
             </a>
-          </li><li class="item">
-            <a href="forblog/blog2tall-3.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+          </li>
+          <li class="item">
+            <a href="forblog/blog2tall-3.jpg" class="view" rel="gallery" title="The Ecstasy of Saint Teresa">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-3.jpg" alt=""/>
             </a>
-          </li><li class="item">
-            <a href="forblog/blog2tall-4.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+          </li>
+          <li class="item">
+            <a href="forblog/blog2tall-4.jpg" class="view" rel="gallery" title="Santa Maria della Vittoria Ceiling">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-4.jpg" alt=""/>
             </a>
-          </li><li class="item">
-            <a href="forblog/blog2tall-5.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+          </li>
+          <li class="item">
+            <a href="forblog/blog2tall-5.jpg" class="view" rel="gallery" title="Santa Maria della Vittoria Altar">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-5.jpg" alt=""/>
             </a>
-          </li><li class="item">
-            <a href="forblog/blog2tall-6.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+          </li>
+          <li class="item">
+            <a href="forblog/blog2tall-6.jpg" class="view" rel="gallery" title="Chocolate Spread">
+              <span class="overlay zoom"></span>
+              <img src="forblog/blog2tall-6.jpg" alt=""/>
+            </a>
+          </li>
+          <li class="item">
+            <a href="forblog/blog2tall-7.jpg" class="view" rel="gallery" title="Avantine Keyhole">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-7.jpg" alt=""/>
             </a>
-          </li><li class="item">
-            <a href="forblog/blog2tall-8.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+          </li>
+          <li class="item">
+            <a href="forblog/blog2tall-8.jpg" class="view" rel="gallery" title="St. Peter's Through Avantine Keyhole">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-8.jpg" alt=""/>
             </a>
           </li><li class="item">
-            <a href="forblog/blog2tall-9.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2tall-9.jpg" class="view" rel="gallery" title="Aperitivo">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-9.jpg" alt=""/>
             </a>
           </li><li class="item">
-            <a href="forblog/blog2tall-10.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2tall-10.jpg" class="view" rel="gallery" title="Cat Sanctuary">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-10.jpg" alt=""/>
             </a>
@@ -262,17 +274,17 @@
             </a>
           </li>-->
           <li class="item">
-            <a href="forblog/blog2tall-15.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2tall-15.jpg" class="view" rel="gallery" title="Il Colosseo">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-15.jpg" alt=""/>
             </a>
           <li class="item">
-            <a href="forblog/blog2tall-13.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2tall-13.jpg" class="view" rel="gallery" title="Arch of Constantine">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-13.jpg" alt=""/>
             </a>
           </li><li class="item">
-            <a href="forblog/blog2tall-14.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2tall-14.jpg" class="view" rel="gallery" title="Arch of Constantine from the Colloseum">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-14.jpg" alt=""/>
             </a>
@@ -283,7 +295,7 @@
               <img src="forblog/blog2tall-16.jpg" alt=""/>
             </a>
           </li><li class="item">
-            <a href="forblog/blog2tall-17.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2tall-17.jpg" class="view" rel="gallery" title="Inside Colloseum">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-17.jpg" alt=""/>
             </a>
@@ -295,7 +307,7 @@
             </a>
           </li>-->
           <li class="item">
-            <a href="forblog/blog2width.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2width.jpg" class="view" rel="gallery" title="Tiber">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width.jpg" alt=""/>
             </a>
@@ -307,39 +319,53 @@
             </a>
           </li>-->
           <li class="item">
-            <a href="forblog/blog2width-3.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2width-3.jpg" class="view" rel="gallery" title="Chocolate Spreads at Market">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-3.jpg" alt=""/>
             </a>
           </li><li class="item">
-            <a href="forblog/blog2width-4.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2width-4.jpg" class="view" rel="gallery" title="Produce at Market">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-4.jpg" alt=""/>
             </a>
           </li><li class="item">
-            <a href="forblog/blog2width-5.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2width-5.jpg" class="view" rel="gallery" title="View of Rome">
+              <span class="overlay zoom"></span>
+              <img src="forblog/blog2width-5.jpg" alt=""/>
+            </a>
+          </li>
+          <li class="item">
+            <a href="forblog/blog2width-6.jpg" class="view" rel="gallery" title="Cat Sanctuary">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-6.jpg" alt=""/>
             </a>
-          </li><li class="item">
-            <a href="forblog/blog2width-7.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+          </li>
+          <li class="item">
+            <a href="forblog/blog2width-7.jpg" class="view" rel="gallery" title="Cooking Carbonara">
+              <span class="overlay zoom"></span>
+              <img src="forblog/blog2width-7.jpg" alt=""/>
+            </a>
+          </li>
+          <li class="item">
+            <a href="forblog/blog2width-8.jpg" class="view" rel="gallery" title="Carbonara e il carciofi alla Romano">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-8.jpg" alt=""/>
             </a>
-          </li><li class="item">
-            <a href="forblog/blog2width-9.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+          </li>
+          <li class="item">
+            <a href="forblog/blog2width-9.jpg" class="view" rel="gallery" title="Produce at Market">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-9.jpg" alt=""/>
             </a>
           </li>
           <li class="item">
-            <a href="forblog/blog2width-14.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2width-14.jpg" class="view" rel="gallery" title="Colloseum">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-14.jpg" alt=""/>
             </a>
           </li>
           <li class="item">
-            <a href="forblog/blog2width-10.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2width-10.jpg" class="view" rel="gallery" title="Palentino">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-10.jpg" alt=""/>
             </a>
@@ -349,18 +375,18 @@
               <img src="forblog/blog2width-11.jpg" alt=""/>
             </a>
           </li><li class="item">
-            <a href="forblog/blog2width-12.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2width-12.jpg" class="view" rel="gallery" title="Il Foro Romano View Two">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-12.jpg" alt=""/>
             </a>
           </li><li class="item">
-            <a href="forblog/blog2width-13.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2width-13.jpg" class="view" rel="gallery" title="Il Foro Romano View Two">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-13.jpg" alt=""/>
             </a>
           </li>
           <li class="item">
-            <a href="forblog/blog2width-15.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2width-15.jpg" class="view" rel="gallery" title="Inside Colloseum">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-15.jpg" alt=""/>
             </a>
