--- a/gallery.html
+++ b/gallery.html
@@ -267,12 +267,18 @@
               <img src="forblog/blog2tall-10.jpg" alt=""/>
             </a>
           </li>
-          <!--<li class="item">
+          <li class="item">
             <a href="forblog/blog2tall-11.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+              <span class="overlay zoom"></span>
+              <img src="forblog/blog2tall-11.jpg" alt=""/>
+            </a>
+          </li>
+          <li class="item">
+            <a href="forblog/blog2tall-12.jpg" class="view" rel="gallery" title="Palentino">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-12.jpg" alt=""/>
             </a>
-          </li>-->
+          </li>
           <li class="item">
             <a href="forblog/blog2tall-15.jpg" class="view" rel="gallery" title="Il Colosseo">
               <span class="overlay zoom"></span>
