--- a/gallery.html
+++ b/gallery.html
@@ -289,14 +289,15 @@
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-13.jpg" alt=""/>
             </a>
-          </li><li class="item">
+          </li>
+          <!--<li class="item">
             <a href="forblog/blog2tall-14.jpg" class="view" rel="gallery" title="Arch of Constantine from the Colloseum">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-14.jpg" alt=""/>
             </a>
-          </li>
+          </li>-->
           </li><li class="item">
-            <a href="forblog/blog2tall-16.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2tall-16.jpg" class="view" rel="gallery" title="Inside Basillica">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-16.jpg" alt=""/>
             </a>
