--- a/gallery.html
+++ b/gallery.html
@@ -261,12 +261,13 @@
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-9.jpg" alt=""/>
             </a>
-          </li><li class="item">
+          </li>
+          <!--<li class="item">
             <a href="forblog/blog2tall-10.jpg" class="view" rel="gallery" title="Cat Sanctuary">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-10.jpg" alt=""/>
             </a>
-          </li>
+          </li>-->
           <li class="item">
             <a href="forblog/blog2tall-11.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
               <span class="overlay zoom"></span>
