--- a/gallery.html
+++ b/gallery.html
@@ -320,12 +320,12 @@
               <img src="forblog/blog2width.jpg" alt=""/>
             </a>
           </li>
-          <!--<li class="item">
+          <li class="item">
             <a href="forblog/blog2width-2.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-2.jpg" alt=""/>
             </a>
-          </li>-->
+          </li>
           <li class="item">
             <a href="forblog/blog2width-3.jpg" class="view" rel="gallery" title="Chocolate Spreads at Market">
               <span class="overlay zoom"></span>
