--- a/blog.html
+++ b/blog.html
@@ -131,15 +131,21 @@
 	      		</a>
 	      	</li>
 	      	<li class="item">
-	      		<a href="forblog/blog2width-10.jpg" class="view" rel="gallery" title="Coffee">
+	      		<a href="forblog/blog2width-10.jpg" class="view" rel="gallery" title="Palentine Hill">
 	      			<span class="overlay zoom"></span>
 	      			<img src="forblog/blog2width-10.jpg" alt=""/>
 	      		</a>
 	      	</li>
 	      	<li class="item">
-	      		<a href="forblog/blog2width-14.jpg" class="view" rel="gallery" title="Tiber River">
+	      		<a href="forblog/blog2width-14.jpg" class="view" rel="gallery" title="Colloseum">
 	      			<span class="overlay zoom"></span>
 	      			<img src="forblog/blog2width-14.jpg" alt=""/>
+	      		</a>
+	      	</li>
+	      	<li class="item">
+	      		<a href="forblog/blog2width-11.jpg" class="view" rel="gallery" title="Da Remo">
+	      			<span class="overlay zoom"></span>
+	      			<img src="forblog/blog2width-11.jpg" alt=""/>
 	      		</a>
 	      	</li>
 	      	<li class="item">
