--- a/aboutme.html
+++ b/aboutme.html
@@ -53,10 +53,10 @@
 				<li>Currently listening to: alt-J</li>
 				<li>Currently drinking: Americano</li>
 			</ul>
-			<!--<p style="text-align=right">Currently listening to: alt-J</p>
-			<p style="text-align=right">Currently drinking: Americano</p>-->
-			<p style="text-align=right">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="blog.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD">here</a>)<br />
+			<p style="text-align=right">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="blog.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD">here</a>)<br/>
 			<span style="display:block; height:20px;"></span></p>
+			<p style="text-align=right">"...'let me be something every minute of every hour of my life.'"</p>
+			<p style="text-align=right">-Betty Smith, <i>A Tree Grows in Brooklyn</i></p>
 		</div>
 		<div class="clear"></div>
 
