--- a/aboutme.html
+++ b/aboutme.html
@@ -55,8 +55,11 @@
 			</ul>
 			<p style="text-align=right">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="blog.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD">here</a>)<br/>
 			<span style="display:block; height:20px;"></span></p>
-			<p style="text-align=right">"...'let me be something every minute of every hour of my life.'"</p>
-			<p style="text-align=right">-Betty Smith, <i>A Tree Grows in Brooklyn</i></p>
+			<br>
+			<ul>
+				<li>"...'let me be something every minute of every hour of my life.'"</li>
+				<li>-Betty Smith, <i>A Tree Grows in Brooklyn</li>
+			</ul>
 		</div>
 		<div class="clear"></div>
 
