--- a/Favorites.html
+++ b/Favorites.html
@@ -52,7 +52,7 @@
 		    </div>
 			<div class="two-third last">
 				<br>
-				<p style="text-align=right; font-size: 15px">Home of the Nutella Calzone and Vicoletto Pizza (Pesto and Potatoes) among many other favorites.</p>
+				<p style="text-align=right; font-size: 18px">Home of the Nutella Calzone, Vicoletto Pizza (Pesto and Potatoes), and Superformaggi Pizza among many other favorites.</p>
 			</div>
 			<div class="clear"></div>
 
@@ -64,7 +64,7 @@
 		    </div>
 			<div class="two-third last">
 				<br>
-				<p style="text-align=right; font-size: 15px">The best Roman style thin pizza I've had thus far.</p>
+				<p style="text-align=right; font-size: 18px">The best Roman style thin pizza I've had thus far.</p>
 			</div>
 			<div class="clear"></div>
 
@@ -76,7 +76,7 @@
 		    </div>
 			<div class="two-third last">
 				<br>
-				<p style="text-align=right; font-size: 15px">One of my favorite gelaterias with a lot of unique flavors.</p>
+				<p style="text-align=right; font-size: 18px">One of my favorite gelaterias with a lot of unique flavors.</p>
 			</div>
 			<div class="clear"></div>
 
@@ -88,12 +88,12 @@
 		    </div>
 			<div class="two-third last">
 				<br>
-				<p style="text-align=right; font-size: 15px">Fred (a type of cookies and cream) is the best gelato flavor I've ever had!</p>
+				<p style="text-align=right; font-size: 18px">Fred (a type of cookies and cream) is the best gelato flavor I've ever had!</p>
 			</div>
 			<div class="clear"></div>
 
   	<h8 style="font-size: 20px">Gelateria del Teatro</h8>
-  		<p style="font-size: 15px">My favorite for more fruity flavors: Basil, Lemon, and Rosemary is my favorite and the Lemon is great too.</p>
+  		<p style="font-size: 18px">My favorite for more fruity flavors: Basil, Lemon, and Rosemary is my favorite and the Lemon is great too.</p>
 
 
 </div><!-- #content -->
