--- a/blog.html
+++ b/blog.html
@@ -218,7 +218,7 @@
 	      		</a>
 	      	</li>
 	      	<li class="item">
-	      		<a href="forblog/long-5.jpg" class="view" rel="gallery" title="Dar Pizza">
+	      		<a href="forblog/long-5.jpg" class="view" rel="gallery" title="Dar Poeta">
 	      			<span class="overlay zoom"></span>
 	      			<img src="forblog/long-5.jpg" alt=""/>
 	      		</a>
