--- a/gallery.html
+++ b/gallery.html
@@ -72,7 +72,7 @@
             </a>
           </li>
           <li class="item">
-            <a href="forblog/long-5.jpg" class="view" rel="gallery" title="Dar Pizza">
+            <a href="forblog/long-5.jpg" class="view" rel="gallery" title="Dar Poeta">
               <span class="overlay zoom"></span>
               <img src="forblog/long-5.jpg" alt=""/>
             </a>
@@ -298,7 +298,7 @@
             </a>
           </li>-->
           </li><li class="item">
-            <a href="forblog/blog2tall-16.jpg" class="view" rel="gallery" title="Inside Basillica">
+            <a href="forblog/blog2tall-16.jpg" class="view" rel="gallery" title="Inside Colloseum">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2tall-16.jpg" alt=""/>
             </a>
@@ -321,7 +321,7 @@
             </a>
           </li>
           <li class="item">
-            <a href="forblog/blog2width-2.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2width-2.jpg" class="view" rel="gallery" title="Piazza Navona">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-2.jpg" alt=""/>
             </a>
@@ -378,7 +378,7 @@
               <img src="forblog/blog2width-10.jpg" alt=""/>
             </a>
           </li><li class="item">
-            <a href="forblog/blog2width-11.jpg" class="view" rel="gallery" title="St. Peter's Basillica">
+            <a href="forblog/blog2width-11.jpg" class="view" rel="gallery" title="Da Remo">
               <span class="overlay zoom"></span>
               <img src="forblog/blog2width-11.jpg" alt=""/>
             </a>
