--- a/aboutme.html
+++ b/aboutme.html
@@ -57,7 +57,7 @@
 			<span style="display:block; height:20px;"></span></p>
 			<br>
 			<ul>
-				<li>"...'let me be something every minute of every hour of my life.'"</li>
+				<li>"Let me be something every minute of every hour of my life."</li>
 				<li>-Betty Smith, <i>A Tree Grows in Brooklyn</li>
 			</ul>
 		</div>
