--- a/gallery.html
+++ b/gallery.html
@@ -399,6 +399,24 @@
               <img src="forblog/blog2width-15.jpg" alt=""/>
             </a>
           </li>
+           <li class="item">
+            <a href="forblog/wide.jpg" class="view" rel="gallery" title="Pacman in Rome">
+              <span class="overlay zoom"></span>
+              <img src="forblog/wide.jpg" alt=""/>
+            </a>
+          </li>
+           <li class="item">
+            <a href="forblog/wide-2.jpg" class="view" rel="gallery" title="View from Trastevere">
+              <span class="overlay zoom"></span>
+              <img src="forblog/wide-2.jpg" alt=""/>
+            </a>
+          </li>
+           <li class="item">
+            <a href="forblog/wide-3.jpg" class="view" rel="gallery" title="Roma Sparita">
+              <span class="overlay zoom"></span>
+              <img src="forblog/wide-3.jpg" alt=""/>
+            </a>
+          </li>
         </ul>
 
   </div>
