--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
           <a class="navbarCurrent" href="index.html" style="font-size: 22px; color:gray; text-decoration: none; font-weight:BOLD">HOME</a>
           <a href="https://www.linkedin.com/in/jannagolden/" style="text-decoration: none; font-size: 22px; color:gray; font-weight:BOLD">LINKEDIN</a>
           <a href="https://github.com/jannaerin" style="text-decoration: none; color:gray; font-size: 22px; font-weight:BOLD">GITHUB</a>
-          <a href="GoldenJannaResume.pdf" style="text-decoration: none; font-size: 22px; color:gray; font-weight:BOLD" target="_blank">RESUME</a>
+          <a href="GoldenJanna.pdf" style="text-decoration: none; font-size: 22px; color:gray; font-weight:BOLD" target="_blank">RESUME</a>
         </div>
       </div>
     </header>
