--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,10 @@
 		<br>
 		<h6>Network – Java</h6>
 		<p>Created a board game which can be played against a human player or a computer program (AI). Used the minimax algorithm with alpha-beta pruning to find the best move for the computer</p>
+		<br>
+		<h6>WU Graph and Minimum Spanning Trees – Java</h6>
+		<p> Implemented WUGraph, an ADT representing a weighted, undirected graph.  Also implemented Kruskal’s algorithm to find the minimum spanning tree of a graph.</p>
+
 
 
 	<div id="janna golden">
