pompeii and cupola blog9

--- a/gallery.html
+++ b/gallery.html
@@ -417,7 +417,7 @@
               <img src="forblog/wide-3.jpg" alt=""/>
             </a>
           </li>
-          <li class="item">
+          <!--<li class="item">
             <a href="forblog/pompeiicupola_wide.jpg" class="view" rel="gallery" title="Roma Sparita">
               <span class="overlay zoom"></span>
               <img src="forblog/pompeiicupola_wide.jpg" alt=""/>
@@ -428,7 +428,7 @@
               <span class="overlay zoom"></span>
               <img src="forblog/pompeiicupola_wide-2.jpg" alt=""/>
             </a>
-          </li>
+          </li>-->
         </ul>
 
   </div>
